<?xml version="1.0"?>
<package>
  <name>isr_m2_driver</name>
  <version>0.1.0</version>
  <description>The isr_m2_driver package</description>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/isr_m2</url>
  <author email="seanyi@wonikrobotics.com">Sean Yi</author>
  <maintainer email="seanyi@wonikrobotics.com">Sean Yi</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
